Table users {
  id integer [primary key, unique]
  username varchar [unique, not null]
  password varchar [not null]
  firstname varchar [not null]
  lastname varchar [not null]
  email varchar [unique, not null]
  created_at timestamp
}

Table usersdata {
  id_user integer [foreign key, unique]
  gender varchar(1)
  biography text
}

Table sexualpreference {
  id integer [primary key, unique]
  sexualpreference varchar
}

Table interest {
  id integer [primary key, unique]
  interest varchar
}

Table picture {
  id integer [primary key, unique]
  picture_path varchar
  is_profile_picture boolean [default false]
}

Table user_interest {
  id_user integer [fk]
  id_interest integer [fk]
}

Table user_picture {
  id_user integer [fk]
  id_picture integer [fk]
}

Table user_sexualpreference {
  id_user integer [fk]
  id_sexualpreference integer [fk]
}

Ref user_sexualpreference : users.id < user_sexualpreference.id_user
Ref sexualpreference : sexualpreference.id - user_sexualpreference.id_sexualpreference

Ref usersdata : users.id - usersdata.id_user
Ref user_interest : users.id < user_interest.id_user
Ref interest : interest.id - user_interest.id_interest

Ref user_picture : users.id < user_picture.id_user
Ref picture : picture.id - user_picture.id_picture
